--- a/listo.css
+++ b/listo.css
@@ -42,3 +42,9 @@ body{
     -webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
 }
+
+
+canvas {
+ background: white;
+    border: black 2px solid;
+}
